# waitlist-backend

./: Cargo.toml  README.md  productionize.sh
invoke-fixtures/: invalid_email.json  valid_email.json
src/: add_email_record.rs  dynamodb.rs  get_aws_configuration.rs  handler.rs  lib.rs  main.rs  response_helpers.rs
tests/: function_handler_tests.rs
