[package]
name = "voto_waitlist"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.68"
aws-config = "0.55.2"
aws-credential-types = { version = "0.55.2", features = ["test-util"] }
aws-sdk-dynamodb = "0.27.0"
email_address = "0.2.4"
http = "0.2.9"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
lockjaw = "0.2.2"
mockall = "0.11.4"
regex = "1.8.1"
serde = "1.0.160"
serde_dynamo = { version= "4.2.2", features = ["aws-sdk-dynamodb+0_27"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "voto-waitlist"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
